--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jbasney.github.io" # the base hostname & protocol for your site
 twitter_username: JimBasney
 github_username:  jbasney
-
+include: openid-config.json
 # Build settings
 markdown: kramdown
 
