--- a/openid-config.json
+++ b/openid-config.json
@@ -1,3 +1,6 @@
+---
+permalink: https://jbasney.github.io/openid-config
+---
 {
    "issuer":"https://scitokens.org/ligo",
    "jwks_uri":"https://scitokens.org/ligo/oauth2/certs",
