Set theme jekyll-theme-tactile

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ title: Jim Basney
 email: jbasney@illinois.edu
 twitter_username: JimBasney
 github_username:  jbasney
+
+theme: jekyll-theme-tactile
