--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-
 title: Jim Basney
 email: jbasney@illinois.edu
 twitter_username: JimBasney
 github_username:  jbasney
-
-theme: jekyll-theme-tactile
+theme: minima
